@@ -17,12 +17,12 @@
 #include <Core.idl>
 
 [
-	uuid (ce635c39-2124-4175-8b23-f5576937f43e),
-	version (1.0),
+  uuid (ce635c39-2124-4175-8b23-f5576937f43e),
+  version (1.0),
 ]
 library dds2ccm_Component
 {
-	importlib ("stdole32.tlb");
+  importlib ("stdole32.tlb");
 
 	[uuid (01936962-6fc1-4f4e-b21c-a40dae61a40b)]
 	coclass dds2ccm_Component
