@@ -88,6 +88,16 @@ Tue Aug 12 15:11:06 UTC 2014  Dennis Feiock  <dfeiock at iupui dot edu>
         * MDE/GME/paradigms/PICML/interpreter/dds2ccm/Event_Creator.cpp:
         * MDE/GME/paradigms/PICML/interpreter/dds2ccm/dds2ccm_Component.idl:
 
+Mon Aug 26 05:47:08 UTC 2013  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * MDE/GME/paradigms/CHAOS/interpreters/codegen/codegen.mpc:
+        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/Code_Generation.idl:
+        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_Impl_Generator_T.cpp:
+        * MDE/GME/paradigms/PICML/interpreter/dds2ccm/dds2ccm_Component.idl:
+        * cuts/workers/CPU/Calibration_Details.cpp:
+
+          Updated to latest version of GME.
+
 Mon Jul 29 14:25:24 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>
 
         * examples/iccm/HelloWorld/models/HelloWorld.xme:
